src/index.css
@import "tailwindcss/base";
@import "tailwindcss/components";
@import "tailwindcss/utilities";
@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");

body {
  font-family: "Lato", sans-serif;
}

.login-desktop {
  display: block;
}

.drop-shadow {
  filter: drop-shadow(0px -5px 18px rgba(0, 0, 0, 0.25));
}

.card-shadow {
  filter: drop-shadow(16px 16px 10px rgba(0, 0, 0, 0.09));
}

.mobile-header {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.custom-header {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

@media (min-width: 768px) {
  .drop-shadow {
    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
  }

  .login-desktop {
    display: grid;
    grid-template-columns: 60% auto;
  }

  .custom-header {
    display: grid;
    grid-template-columns: 90% 5% auto;
    align-items: center;
    gap: 20px;
  }
}

